--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,12 +12,12 @@
 
 :root {
   /* colors */
-  --background-color: white;
-  --light-color: #f8f8f8;
-  --dark-color: #505050;
-  --text-color: #131313;
-  --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --background-color: #f6f4f4;
+  --light-color: #ff0000;
+  --dark-color: #00ff00;
+  --text-color: #0d0c0c;
+  --link-color: #ffff00;
+  --link-hover-color: #000fff;
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
