--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
   --light-color: #ff0000;
   --dark-color: #00ff00;
   --text-color: #0d0c0c;
-  --link-color: #ffff00;
+  --link-color: #000000;
   --link-hover-color: #000fff;
 
   /* fonts */
