Update style.css file with your repo path

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
 :root {
   /* colors */
   --background-color: #f6f4f4;
-  --light-color: #ff0000;
+  --light-color: #f9f5f5;
   --dark-color: #00ff00;
   --text-color: #0d0c0c;
   --link-color: #000000;
